crates/panache-parser/tests/snapshots/yaml__yaml_suite_5BVJ.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 871
expression: snapshot
---
case_id: 5BVJ
input: "literal: |\n  some\n  text\nfolded: >\n  some\n  text\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
