crates/panache-parser/tests/snapshots/yaml__yaml_suite_5C5M.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 5C5M
input: "- { one : two , three: four , }\n- {five: six,seven : eight}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
