crates/panache-parser/tests/snapshots/yaml__yaml_suite_5GBF.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 5GBF
input: "Folding:\n  \"Empty line\n   \t\n  as a line feed\"\nChomping: |\n  Clipped empty lines\n \n\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
