crates/panache-parser/tests/snapshots/yaml__yaml_suite_5LLU.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 843
expression: snapshot
---
case_id: 5LLU
input: "block scalar: >\n \n  \n   \n invalid\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_ERROR:block scalar content indent smaller than leading blank line indent@25..33]
