crates/panache-parser/tests/snapshots/yaml__yaml_suite_5MUD.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 5MUD
input: "---\n{ \"foo\"\n  :bar }\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
