crates/panache-parser/tests/snapshots/yaml__yaml_suite_5NYZ.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 5NYZ
input: "key:    # Comment\n  value\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
