crates/panache-parser/tests/snapshots/yaml__yaml_suite_5TYM.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 5TYM
input: "%TAG !m! !my-\n--- # Bulb here\n!m!light fluorescent\n...\n%TAG !m! !my-\n--- # Color here\n!m!light green\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
