crates/panache-parser/tests/snapshots/yaml__yaml_suite_5U3A.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 5U3A
input: "key: - a\n     - b\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:block sequence cannot start on the same line as its key@14..15]
