crates/panache-parser/tests/snapshots/yaml__yaml_suite_62EZ.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 62EZ
input: "---\nx: { y: z }in: valid\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_TRAILING_CONTENT_AFTER_FLOW_END:unexpected content after flow-collection close in block context@15..17]
